--- a/oauth-client-code/src/main/resources/templates/index.html
+++ b/oauth-client-code/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 <body>
 <div>
     <a href="http://localhost:6001/oauth/authorize?client_id=code-client&response_type=code&redirect_uri=http://localhost:6102/client-authcode/login">登录</a>
-    <span th:text="'当前认证用户：' + ${username}"></span>
-    <span th:text="${accessToken}"></span>
+    <span th:text="'当前认证用户：' + ${username}"></span><br>
+    <label>当前认证信息：</label><span th:text="${accessToken}"></span>
 </div>
 </body>
 </html>
